# sem-fastapi-currency-api

./: main.py  pyproject.toml
